sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: not found: value i
    i = 0; 
    ^AlgBubbleSort1:9: error: not found: value i
    while(i < nbValue-1) {
          ^AlgBubbleSort1:10: error: not found: value x
      x = getValue(i);
      ^AlgBubbleSort1:11: error: not found: value y
      y = getValue(i+1);
      ^